force-app/main/default/objects/Flat__c/Flat__c.object-meta.xml
<CustomObject>
    <label>Flat</label>
    <nameField>
        <label>Flat Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>