force-app/main/default/objects/Flat__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <label>Building Name</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Flats</relationshipLabel>
    <relationshipName>Flats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>