force-app/main/default/objects/Flat__c/fields/LMProduct__c.field-meta.xml
<CustomField>
    <fullName>LMProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LMProduct</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>equals</operation>
            <value>Vacant</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LMProduct__c</referenceTo>
    <relationshipLabel>Flats</relationshipLabel>
    <relationshipName>Flats</relationshipName>
    <type>Lookup</type>
</CustomField>